--- a/css/caja.css
+++ b/css/caja.css
@@ -8,7 +8,7 @@
 	background:white;
 }
 .contenedor-caja h1{
-	background: #2F4DFF;
+	background: #6a1c32;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -38,7 +38,7 @@
 	margin-top:5%;
 	width:30%;
 	height:50px;
-	background-color:#1073C4;
+	background-color:#6a1c32;
 	color:white;
 	font-size:20px;
 	cursor:pointer;
