--- a/css/solicitarTurno.css
+++ b/css/solicitarTurno.css
@@ -42,7 +42,7 @@
 	width:30%;
 	min-width:170px;
 	height:50px;
-	background-color:#1073C4;
+	background-color:#6a1c32;
 	color:white;
 	font-size:20px;
 	cursor:pointer;
