--- a/css/info_empresa.css
+++ b/css/info_empresa.css
@@ -9,7 +9,7 @@
 	background:white;
 }
 .contenedor-info h1, .form-editar h1{
-	background:#2F4DFF;
+	background:#b17a45;
 	color:white;
 	display: flex;
 	align-items: center;
@@ -62,7 +62,7 @@
 }
 .logoImagen img{
 	width:100%;
-	height:100%;
+	height:80;
 }
 #editarInfo{
 	display:block;
