--- a/css/registro_de_usuarios.css
+++ b/css/registro_de_usuarios.css
@@ -8,7 +8,7 @@
 }
 .form-login h1{
 	border-radius:5px 5px 0px 0px;
-	background-color:#2F4DFF;
+	background-color:#b17a45;
 	color:white;
 	display: flex;
 	align-items: center;
